[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["meowmeowjyan <153070982@qq.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
